2014-08-15  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/62107
	* trans-openmp.c (gfc_omp_finish_clause): Handle scalar pointer
	or allocatable passed by reference.
	(gfc_trans_omp_clauses) <case OMP_LIST_MAP>: Likewise.

2014-08-14  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/62076
	* openmp.c (gfc_match_omp_clauses): When failed to match
	operator name, defined op name or name, set buffer to
	empty string.  Don't call gfc_find_omp_udr if buffer is empty
	string.
	(gfc_match_omp_declare_reduction): Call gfc_undo_symbols ()
	before calling gfc_free_omp_udr.

2014-08-10  Thomas Koenig  <tkoenig@gcc.gnu.org>

	Backport from trunk
	PR fortran/61999
	* simplify.c (gfc_simplify_dot_product): Convert types of
	vectors before calculating the result.

2014-07-19  Paul Thomas  <pault@gcc.gnu.org>

	Backport from mainline
	PR fortran/61780
	* dependency.c (gfc_dep_resolver): Index the 'reverse' array so
	that elements are skipped. This then correctly aligns 'reverse'
	with the scalarizer loops.

2014-07-16  Release Manager

	* GCC 4.9.1 released.

2014-07-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/61459
	PR fortran/58883
	* trans-expr.c (fcncall_realloc_result): Use the natural type
	for the address expression of 'res_desc'.

2014-07-07  Dominique d'Humieres <dominiq@lps.ens.fr>
	    Mikael Morin <mikael@gcc.gnu.org>

	PR fortran/41936
	* trans-expr.c (gfc_conv_expr_reference): Deallocate array
	components.

2014-07-02  Jakub Jelinek  <jakub@redhat.com>
	    Fritz Reese  <Reese-Fritz@zai.com>

	* decl.c (variable_decl): Reject old style initialization
	for derived type components.

2014-06-30  Jakub Jelinek  <jakub@redhat.com>

	* module.c (MOD_VERSION): Revert back to 12.
	(MOD_VERSION_OMP4): Define.
	(module_omp4): New variable.
	(mio_symbol): Call mio_omp_declare_simd only if module_omp4.
	(read_module): Load omp udrs only if module_omp4.
	(write_module): Write omp udrs only if module_omp4.
	(find_omp_declare_simd): New function.